--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,10 @@ body {
     transition: none;
 }
 
-.hero-content,
-.hero-buttons,
-.hero-features {
-    opacity: 0; /* Ascundem inițial */
-    transform: translateY(20px); /* Poziția inițială */
-    transition: opacity 0.5s ease, transform 0.5s ease; /* Adăugăm tranziții */
+.hero-content {
+    margin-bottom: 4rem;
+    opacity: 1;
+    transform: none;
 }
 
 .hero-content h1 {
